--- a/src/main/resources/templates/emp/list.html
+++ b/src/main/resources/templates/emp/list.html
@@ -56,10 +56,11 @@
 				<!--引入侧边栏-->
 				<!--选择器写法：#加上id-->
 				<!--<div th:replace="~{dashboard::#sidebar}"></div>-->
+				<!--activeUri='emps'传参-->
 				<div th:replace="commons/bar::#sidebar(activeUri='emps')"></div>
 
 				<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-					<h2><button class="btn btn-sm btn-success">员工添加</button></h2>
+					<h2><a class="btn btn-sm btn-success" href="emp" th:href="@{/emp}">员工添加</a></h2>
 					<div class="table-responsive">
 						<table class="table table-striped table-sm">
 							<thead>
@@ -80,16 +81,19 @@
 									 <td th:text="${emp.email}"></td>
 									 <td th:text="${emp.gender}==0?'女':'男'"></td>
 									 <td th:text="${emp.department.departmentName}"></td>
-									 <td th:text="${#dates.format(emp.birth, 'yyyy/MMM/dd')}"></td>
+									 <td th:text="${#dates.format(emp.birth, 'yyyy/MM/dd')}"></td>
 									 <td>
-										 <button class="btn btn-sm btn-primary">编辑</button>
-										 <button class="btn btn-sm btn-danger">删除</button>
+										 <a class="btn btn-sm btn-primary" th:href="@{/emp/}+${emp.id}">编辑</a>
+										 <button th:attr="del_uri=@{/emp/}+${emp.id}" class="btn btn-sm btn-danger deleteBtn">删除</button>
 									 </td>
 							     </tr>
 							</tbody>
 						</table>
 					</div>
 				</main>
+				<form id="deleteEmpForm"  method="post">
+					<input type="hidden" name="_method" value="delete"/>
+				</form>
 			</div>
 		</div>
 
@@ -105,39 +109,13 @@
 		<script>
 			feather.replace()
 		</script>
-
-		<!-- Graphs -->
-		<script type="text/javascript" src="asserts/js/Chart.min.js"></script>
 		<script>
-			var ctx = document.getElementById("myChart");
-			var myChart = new Chart(ctx, {
-				type: 'line',
-				data: {
-					labels: ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
-					datasets: [{
-						data: [15339, 21345, 18483, 24003, 23489, 24092, 12034],
-						lineTension: 0,
-						backgroundColor: 'transparent',
-						borderColor: '#007bff',
-						borderWidth: 4,
-						pointBackgroundColor: '#007bff'
-					}]
-				},
-				options: {
-					scales: {
-						yAxes: [{
-							ticks: {
-								beginAtZero: false
-							}
-						}]
-					},
-					legend: {
-						display: false,
-					}
-				}
-			});
+			$(".deleteBtn").click(function(){
+			    //删除当前员工的
+			    $("#deleteEmpForm").attr("action",$(this).attr("del_uri")).submit();
+			    return false;
+            });
 		</script>
-
 	</body>
 
 </html>
