--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,15 +7,15 @@
 		<meta name="author" content="">
 		<title>Signin Template for Bootstrap</title>
 		<!-- Bootstrap core CSS -->
-		<link href="asserts/css/bootstrap.min.css"  rel="stylesheet">
+		<link th:href="@{/asserts/css/bootstrap.min.css}"  rel="stylesheet">
 		<!--  可以加入，th:href="@{/webjars/bootstraps/5.0.1/css/bootstrap.css}"，但是没必要-->
 		<!-- Custom styles for this template -->
-		<link href="asserts/css/signin.css" th:href="@{asserts/css/signin.css}" rel="stylesheet">
+		<link th:href="@{/asserts/css/signin.css}"  rel="stylesheet">
 	</head>
 
 	<body class="text-center">
 		<form class="form-signin" action="dashboard.html" th:action="@{/user/login}" method="post">
-			<img class="mb-4" th:src="@{/asserts/img/cat.gif}" src="asserts/img/cat.gif" alt="" width="72" height="72">
+			<img class="mb-4" th:src="@{/asserts/img/cat.gif}" src="/asserts/img/cat.gif" alt="" width="72" height="72">
 			<h1 class="h3 mb-3 font-weight-normal" th:text="#{login.tip}">Please sign in</h1>
 			<!--做判断-->
 			<p style="color:red" th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p>
